edited icon spacing is fixed

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -1047,6 +1047,10 @@
         > i {
             margin-right: 2px;
         }
+
+        > i::before {
+            letter-spacing: 0;
+        }
     }
 
     .emoticon {
